<resources>
    <string name="app_name">PropertyAnimation_2</string>
    <string name="rotate">Rotate</string>
    <string name="transparent">transparent</string>
    <string name="drop">drop</string>
    <string name="demo_result">This is test text</string>
    <string name="scale_text">Enlarge Text</string>
    <string name="shift_text">Shift Text</string>
    <string name="change_color">Change color</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
