<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hungyuwei.propertyanimation_2.MainActivity"
    android:id ="@+id/linLayRoot"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/btnRotate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rotate"
            />
        <Button
            android:id="@+id/btnTransparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transparent"
            />
        <Button
            android:id="@+id/btnDrop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drop"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/btnScale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scale_text"/>
        <Button
            android:id="@+id/btnShift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shift_text"/>

        <Button
            android:id="@+id/btnChangeColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_color"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/txtDemo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/demo_result"
            android:textSize="45sp"
            />
    </LinearLayout>

</LinearLayout>
